Opened 13 years ago
Closed 13 years ago
#2917 closed defect (fixed)
Wrong framerate for mpeg2video in lxf
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | lxf mpeg2video regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
http://thread.gmane.org/gmane.comp.video.ffmpeg.user/47567
A user uploaded a lxf sample that shows an incorrect framerate of 14.99 instead of 29.97 since 45bd0d1 (ticket #1065) unless --disable-parser=mpegvideo is used.
$ ffmpeg -i Video_LXF.lxf -f null -
ffmpeg version N-55905-g62a6052 Copyright (c) 2000-2013 the FFmpeg developers
built on Aug 30 2013 13:10:20 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl --disable-indev=jack
libavutil 52. 42.100 / 52. 42.100
libavcodec 55. 29.100 / 55. 29.100
libavformat 55. 15.100 / 55. 15.100
libavdevice 55. 3.100 / 55. 3.100
libavfilter 3. 82.102 / 3. 82.102
libswscale 2. 5.100 / 2. 5.100
libswresample 0. 17.103 / 0. 17.103
libpostproc 52. 3.100 / 52. 3.100
Guessed Channel Layout for Input Stream #0.1 : 7.1
Input #0, lxf, from 'Video_LXF.lxf':
Duration: 00:00:16.88, start: 0.000000, bitrate: 12229 kb/s
Stream #0:0: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p, 720x480 [SAR 8:9 DAR 4:3], 6000 kb/s, 14.99 fps, 29.97 tbr, 29.97 tbn, 59.94 tbc
Stream #0:1: Audio: pcm_s16le_planar, 48000 Hz, 7.1, s16p, 6144 kb/s
Output #0, null, to 'pipe:':
Metadata:
encoder : Lavf55.15.100
Stream #0:0: Video: rawvideo (I420 / 0x30323449), yuv420p, 720x480 [SAR 8:9 DAR 4:3], q=2-31, 200 kb/s, 90k tbn, 29.97 tbc
Stream #0:1: Audio: pcm_s16le, 48000 Hz, 7.1, s16, 6144 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (mpeg2video -> rawvideo)
Stream #0:1 -> #0:1 (pcm_s16le_planar -> pcm_s16le)
Press [q] to stop, [?] for help
[mpeg2video @ 0x2430280] allocating dummy last picture for B frame
[null @ 0x24359c0] Encoder did not produce proper pts, making some up.
[mpeg2video @ 0x2430280] allocating dummy last picture for B frame
frame= 507 fps=0.0 q=0.0 Lsize=N/A time=00:00:17.01 bitrate=N/A dup=2 drop=1
video:48kB audio:12763kB subtitle:0 global headers:0kB muxing overhead -100.000168%
Change History (2)
comment:1 by , 13 years ago
comment:2 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Sample uploaded to http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket2917/